# education-system

./: .env  .gitignore  NOTICE  README.md  pubspec.yaml
android/app/: build.gradle
integration_test/: simple_test.dart
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  main.dart
lib/assets/: Assests Readme.md
lib/assets/images/: Education%20System%20Digrame.odg
lib/config/network/: NetworkService.dart  config.dart  network_config.dart
lib/config/routes/: locator.dart  routes.dart
lib/config/themes/: theme_config.dart
lib/core/enum/: user_role.dart
lib/core/error/: AppInterceptor.dart  api_error_handler.dart  route_error_page.dart  urlPath.dart
lib/core/flutter_rust_bridge_generated/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.web.dart
lib/core/model/: academic_department_model.dart  academic_faculty_model.dart  academic_semester_model.dart  admin_model.dart  faculty_model.dart  student_model.dart  user_model.dart
lib/core/utils/: constants.dart  widget_extensions.dart
lib/data/cache/: sharedpreferences.dart
lib/data/remote/: user_remote.dart  user_remote_impl.dart
lib/data/repository/: user_repository_impl.dart
lib/domain/model/: user_model.dart
lib/theme/: theme_config.dart
lib/utils/: constants.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
native/src/: bridge_generated.rs
rust/: Cargo.toml
rust/src/: frb_generated.io.rs
rust/src/api/core/: dbconnect.rs
rust_builder/cargokit/: LICENSE
(+61 files in other folders)
