[package]
name = "rust_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.15"
serde = { version = "1.0.195", features = ["derive"] }
surrealdb = "1.1.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
